Developer/src/objects/BLND_DFDT_Task__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Approval__c</fullName>
        <label>Approval</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Billable_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Complete__c</fullName>
        <label>Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Constraint_Date__c</fullName>
        <label>Constraint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Constraint_Type__c</fullName>
        <label>Constraint Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Cost_Baseline__c</fullName>
        <label>Cost Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Dependent__c</fullName>
        <label>Dependent</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>詳細内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_DreamFactory__c</fullName>
        <label>DreamFactory</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Business_Days__c</fullName>
        <label>Duration In Business Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Calendar_Days__c</fullName>
        <label>Duration In Calendar Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Duration__c</fullName>
        <label>Duration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Finish_Baseline__c</fullName>
        <label>Finish Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Finish__c</fullName>
        <label>予定終了日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Index__c</fullName>
        <label>Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Link__c</fullName>
        <label>Link</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Link</label>
        <referenceTo>BLND_DFDT_Project__c</referenceTo>
        <relationshipName>R00N30000002PYhyEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Resources__c</fullName>
        <label>Resources</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue_Baseline__c</fullName>
        <label>Revenue Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Schedule__c</fullName>
        <label>Schedule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Start_Baseline__c</fullName>
        <label>Start Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Start__c</fullName>
        <label>予定開始日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Subtask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subtask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Tabs__c</fullName>
        <label>Tabs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Actual_Hours__c</fullName>
        <label>Work In Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Planned_Hours__c</fullName>
        <label>Work In Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work__c</fullName>
        <label>Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressList__c</fullName>
        <label>進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>1.起票済み</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2.調査中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.調査完了、着手待ち</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.修正中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.修正完了、承認待ち</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.クローズ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>BLND_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>進捗状況</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RemainingHour__c</fullName>
        <formula>ScheduledHour__c  * ( 1 -  Progress__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残工数(h)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduledHour__c</fullName>
        <label>予定工数(h)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>残存バグ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>バグ名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>残存バグ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>